Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14538

Perforce: Can't diff files in Perforce Submit window when using P4CONFIG

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • None
    • Qt Creator 3.5.0-beta1
    • None

    Description

      Qt Creator 3.5.0 master branch has P4CONFIG support, which means one can work on multiple projects in different workspaces without having to configure Qt Creator every time.

      Unfortunately when diffing files in the Submit Window the logic is a bit different and P4CONFIG is not taken into consideration resulting in a nice:

      Perforce client error:
      	Connect to server failed; check $P4PORT.
      	TCP connect to perforce:1666 failed.
      	No such host is known. 
      

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-14538
        # Subject Branch Project Status CR V

        Activity

          People

            hunger Tobias Hunger
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes