Perforce: Diff for files in submit changelist dialog works

Perforce repositories configured with P4CONFIG had a bug
in the submit dialog, one could not see the differences for
the submited files.

Change-Id: Ie15fd66667dca1c0863a29e87ff76583d9aa3bbb
Task-number: QTCREATORBUG-14538
Reviewed-by: Alexander Drozdov <adrozdoff@gmail.com>
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>